syntax = "proto3";

package pb;

import "protoc-gen-openapiv2/options/annotations.proto";


option go_package = "example/grpc/internal/controller/rpc/pb";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
      title: "gRPC with HTTP gateway example";
      version: "1.0";
      contact: {
        name: "gRPC-Gateway project";
        url: "https://github.com/ckam225/golang/tree/grpc-gateway";
        email: "ckam225@gmail.com";
      };
    }
};


message Empty {}

message PathRequest {
    int64 id = 1;
}

message QueryRequest {
    int64 limit = 1;
    int64 offset = 2; 
    string order_by = 3;
}
